# shamir-db

./: .crush.json  .env  .git-blame-ignore-revs  .gitattributes  .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE.md  BROWSER_WASM_PLAN.md  CAPACITY_PLANNING.md  CHANGELOG.md  CHROMA_KNOWLEDGE_PROTOCOL.md  CHROMA_MCP_GUIDE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PERF_OPTIMIZATIONS.md  PRODUCTION_HARDENING_ROADMAP.md  PRODUCTION_SERVER_PLAN.md  README.md  ROADMAP.md  SECURITY.md  SPEC_COMBINED.md  bench-iters.txt  cat  claude-flow.bat  clippy.toml  cm.bat  cooldown.toml  deny.toml  done.md  rust-toolchain.toml
crates/shamir-bench-utils/: Cargo.toml
crates/shamir-bench-utils/src/: lib.rs  peak_mem.rs  vector_data.rs
crates/shamir-captrack/: Cargo.toml
crates/shamir-captrack/src/: dump.rs  lib.rs  registry.rs
crates/shamir-client/: Cargo.toml
crates/shamir-client-node/: Cargo.toml  build.rs  index.d.ts  index.js  package.json  proof-typed-errors.js  rust-toolchain.toml  wrapper.d.ts  wrapper.js
crates/shamir-client-node/src/: lib.rs
crates/shamir-client/src/: client.rs  cursor_stream.rs  error.rs  interner_cache.rs  interner_cache_ops.rs  lib.rs  subscription.rs  wire_frames.rs
crates/shamir-client/tests/: batch_cond_e2e.rs  batch_for_each_e2e.rs  batch_sequencing_e2e.rs  batch_when_e2e.rs  cursor_lifecycle_e2e.rs  cursor_stream.rs  smoke.rs
crates/shamir-collections/: Cargo.toml
crates/shamir-collections/src/: lib.rs
crates/shamir-connect/: Cargo.toml  README.md
crates/shamir-connect/benches/: hot_paths.rs
crates/shamir-connect/src/: lib.rs
crates/shamir-connect/test-vectors/: README.md  argon2id_default.json  argon2id_default.toml  auth_message_default.json  auth_message_default.toml  fake_blob_default.json  fake_blob_default.toml  identity_rotation_signed_by_old.json  identity_rotation_signed_by_old.toml  identity_sig_default.json  identity_sig_default.toml  kdf_canonical_string_default.json  kdf_canonical_string_default.toml  resumption_ticket_roundtrip.json  resumption_ticket_roundtrip.toml  scram_flow_default.json  scram_flow_default.toml
crates/shamir-connect/tests/: integration_admin.rs  integration_bootstrap.rs  integration_changepw.rs  integration_full_auth.rs  integration_log_redaction.rs  integration_resume.rs  integration_rotation.rs  integration_session.rs  integration_username_precis.rs
crates/shamir-db/: Cargo.toml
crates/shamir-db/benches/: authorize_gate.rs  bench_allocator.rs  changelog_read.rs  durability_axis.rs  engine_perf.rs  record_size_axis.rs
crates/shamir-db/src/: lib.rs  main.rs
crates/shamir-db/tests/: access_ddl.rs  builder_execute_e2e.rs  cas_sequenced_e2e.rs  changefeed_e2e.rs  changes_since.rs  create_function_gating.rs  ddl_wire_e2e.rs  declarative_schema_ddl_e2e.rs  declarative_schema_default_e2e.rs  declarative_schema_e2e.rs  declarative_schema_fk_e2e.rs  declarative_schema_fk_ondelete_e2e.rs  declarative_schema_nested_path_ddl_e2e.rs  declarative_schema_relational_e2e.rs  declarative_schema_self_ref_cascade_ddl_e2e.rs  declarative_schema_stamping_e2e.rs  declarative_schema_stamping_replay_e2e.rs  declarative_schema_unique_e2e.rs  delegation_e2e.rs  describe_table_e2e.rs  enforcement_dml_e2e.rs  functions_e2e.rs  functions_lifecycle.rs  getter_only_e2e.rs  migration_index2.rs  native_parity_e2e.rs  parity_matrix_gap_tests.rs  purge_history.rs  query_admin.rs  query_auth.rs  query_buffer_config.rs  query_index2.rs  rename_db_e2e.rs  rename_index_e2e.rs  rename_repo_e2e.rs  rename_table_durability.rs  rename_table_e2e.rs  retention_ddl.rs  sec1_ddl_gate_e2e.rs  stored_proc_e2e.rs  (+3 more)
crates/shamir-engine/: Cargo.toml
crates/shamir-engine/benches/: backend_matrix.rs  batch_stage_parallelism.rs  cond_expr_eval.rs  distinct.rs  drain_cost_vs_depth.rs  drain_throughput.rs  durable_concurrent_commit.rs  filter_eval.rs  filtered_vector_search.rs  for_each_eval.rs  fts_indexed.rs  group_by_keys.rs  interner_cold_growth.rs  interner_concurrent.rs  keyset_seek.rs  membuffer_concurrent.rs  membuffer_pump.rs  order_by_pipeline.rs  permission_check.rs  quantization_f32_vs_sq8.rs  read_path_matrix.rs  select_pipeline.rs  select_projection.rs  tx_concurrent.rs  tx_pipeline.rs  vector_bulk_compaction.rs  vector_search.rs  wal_recovery.rs  wasm_invoke.rs  when_skip_eval.rs
crates/shamir-engine/examples/: count_allocs_read_pipeline.rs  persisted_hnsw.rs  prof_order_by.rs  vector_report.rs
crates/shamir-engine/src/: LAYERS.md  README.md  lib.rs  table.md
crates/shamir-engine/tests/: crash_recovery.rs  overlay_depth_probe.rs
crates/shamir-funclib/: Cargo.toml
crates/shamir-funclib/benches/: distinct_arrays.rs
crates/shamir-funclib/src/: agg.rs  arrays.rs  canonical.rs  cast.rs  compare.rs  crypto.rs  datetime.rs  encode.rs  gen.rs  json.rs  lib.rs  math.rs  null.rs  object.rs  registry.rs  scalar_resolver.rs  strings.rs  text.rs  validate.rs  value_nav.rs
crates/shamir-index/: Cargo.toml
crates/shamir-index/benches/: create_index_streaming.rs  posting_cache_hit.rs  posting_repr_iterate.rs  sq8_hot_path.rs
crates/shamir-index/src/: actor.rs  backend.rs  bm25.rs  build_backend.rs  descriptor.rs  expr.rs  fts_backend.rs  fts_ranked_backend.rs  functional_backend.rs  kind.rs  lib.rs  persistence.rs  registry.rs  tokenizer.rs  write_ops.rs
crates/shamir-numa/: Cargo.toml  README.md
crates/shamir-numa/src/: cache_padded.rs  cpulist.rs  detect.rs  error.rs  fallback.rs  lib.rs  linux.rs  mock.rs  node.rs  node_replicated.rs  (+1 more)
crates/shamir-query-builder/: Cargo.toml
crates/shamir-query-builder-macros/: Cargo.toml
crates/shamir-query-types/: Cargo.toml
crates/shamir-sdk/: Cargo.toml
crates/shamir-sdk-macros/: Cargo.toml
crates/shamir-server/: Cargo.toml
crates/shamir-storage/: Cargo.toml
crates/shamir-transport-tcp/: Cargo.toml
crates/shamir-transport-ws/: Cargo.toml
crates/shamir-tx/: Cargo.toml
crates/shamir-types/: Cargo.toml
crates/shamir-wal/: Cargo.toml
crates/shamir-wasm-host/: Cargo.toml
examples/fn-procedure-builder/: Cargo.toml
(+3032 files in other folders)
