[workspace]
members = ["crates/*"]
resolver = "2"

# napi-rs cdylib needs the MSVC toolchain on Windows (it delay-loads
# Node-API symbols from `node.exe` via `delayimp.lib`, which the
# build script only wires up for `x86_64-pc-windows-msvc`). Excluded
# from default workspace ops so `cargo build` / `cargo test` on the
# host's `windows-gnu` toolchain don't fail trying to link `libnode.dll`.
# Build it explicitly via `cargo build -p shamir-client-node` (its own
# `rust-toolchain.toml` pins MSVC) or `napi build` from `npm`.
exclude = ["crates/shamir-client-node"]

[profile.dev]
opt-level = 0
codegen-units = 14
incremental = true

[profile.release]
lto = "fat"
# `opt-level = 3` (speed) instead of `"z"` (size). This is a server-
# side database — binary size barely matters, throughput on hot
# loops (filter eval, projection, codec) does. shamir-client-node
# has its own `[profile.release] opt-level = "z"` because it ships
# as a JS-bundled native module.
opt-level = 3
codegen-units = 14
incremental = true
debug = false
strip = true
panic = "abort"

# `cargo bench` uses this profile by default. Inherits from release
# but DROPS `lto = "fat"` — that single flag was 80%+ of the
# 7-minute bench compile time in dev iteration. Without it the
# bench binary compiles in ~1.5 minutes instead. The measurements
# come out 5-15% pessimistic vs. fat-LTO numbers because
# cross-crate inlining doesn't fire (planner/executor/storage
# stay in separate codegen units), but for iterative perf work
# the wall-clock saving wins.
#
# For "final" / publishable numbers run explicitly with the
# release profile:
#   cargo bench -p shamir-db --profile=release
[profile.bench]
inherits = "release"
lto = false
incremental = true
# Keep `opt-level = 3` from release so hot inner loops still get
# the same scalar/SIMD codegen — only cross-crate inlining is lost.
