[workspace]
members = ["crates/*"]
resolver = "2"

# napi-rs cdylib needs the MSVC toolchain on Windows (it delay-loads
# Node-API symbols from `node.exe` via `delayimp.lib`, which the
# build script only wires up for `x86_64-pc-windows-msvc`). Excluded
# from default workspace ops so `cargo build` / `cargo test` on the
# host's `windows-gnu` toolchain don't fail trying to link `libnode.dll`.
# Build it explicitly via `cargo build -p shamir-client-node` (its own
# `rust-toolchain.toml` pins MSVC) or `napi build` from `npm`.
# `shamir-client-ts` is a pure-TypeScript package (no Cargo.toml); exclude it
# so the `crates/*` glob doesn't try to load it as a workspace member.
exclude = ["crates/shamir-client-node", "crates/shamir-client-ts"]

[workspace.dependencies]
captrack = { path = "D:/dev/rust/captrack", features = ["telemetry"] }
# TEMPORARY: path dep until bench-scale-tool is published as a standalone
# crate (crates.io or a git dep) — swap this one line then.
bench-scale-tool = { path = "D:/dev/rust/bench-scale-tool" }

[workspace.lints.clippy]
absolute_paths = "warn"
disallowed_methods = "warn"
disallowed_types = "deny"

[profile.dev]
opt-level = 0
codegen-units = 14
incremental = true
# `line-tables-only` keeps panic backtraces with file:line but drops the
# bulk of debug info (full `.pdb` per binary). With `--all-targets` +
# nextest building dozens of separate test binaries, full debuginfo was
# the dominant source of `target/` bloat; this roughly halves per-build
# size while leaving backtraces readable.
debug = "line-tables-only"

[profile.release]
lto = "fat"
# `opt-level = 3` (speed) instead of `"z"` (size). This is a server-
# side database — binary size barely matters, throughput on hot
# loops (filter eval, projection, codec) does. shamir-client-node
# has its own `[profile.release] opt-level = "z"` because it ships
# as a JS-bundled native module.
opt-level = 3
codegen-units = 14
incremental = true
debug = false
strip = true
panic = "abort"

# `cargo bench` uses this profile by default. Inherits from release
# but DROPS `lto = "fat"` — that single flag was 80%+ of the
# 7-minute bench compile time in dev iteration. Without it the
# bench binary compiles in ~1.5 minutes instead. The measurements
# come out 5-15% pessimistic vs. fat-LTO numbers because
# cross-crate inlining doesn't fire (planner/executor/storage
# stay in separate codegen units), but for iterative perf work
# the wall-clock saving wins.
#
# For "final" / publishable numbers run explicitly with the
# release profile:
#   cargo bench -p shamir-db --profile=release
[profile.bench]
inherits = "release"
lto = false
incremental = true
# Benches ALWAYS build at opt-level=1 — never 0, never 3. Two reasons:
#
# 1. Build speed: what hurts iterative /opti is the BUILD step, not the
#    measurement; with bench-scale-tool's fixed-iteration model the
#    reported ns/op is already a real per-op cost (no criterion adaptive
#    sampling to smooth over), so a leaner opt level keeps the
#    calibrate → run → re-calibrate loop fast. opt-1 is ~2.5× faster to
#    build than opt-3.
# 2. Correctness: opt-level=0 generates async fn state machines so large
#    (no variable-lifetime collapse across await points) that
#    deeply-chained bench setup (`fresh_db → seed_users → create_index` +
#    heavier query planner paths) overflows the ~1 MiB Windows main-thread
#    stack. opt-1 enables the lightest mir-opts that collapse those state
#    machines back under the limit. Documented in
#    docs/perf/sefer-alloc-rollout-2026-06-30.md under
#    "Stack overflow в engine_perf".
#
# For "final" / publishable absolute numbers, run explicitly with the
# release profile: cargo bench -p <crate> --bench <name> --profile=release
opt-level = 1
