[package]
name = "shamir-bench-utils"
version = "0.1.0-alpha.1"
publish = false
edition = "2021"
description = "Bench helpers shared across the workspace — BENCH_QUICK env-var support for /opti baseline/after pairs."
license = "MIT OR Apache-2.0"

[lib]
# Tests live alongside their callers; this crate is a thin helper.
doctest = false

[features]
peak_mem = ["dep:peak_alloc"]

[dependencies]
peak_alloc = { version = "0.3", optional = true }

[lints]
workspace = true
