[package]
name = "shamir-captrack"
version = "0.1.0"
edition = "2021"
description = "Capacity-telemetry infrastructure for ShamirDB — call-site macros + Tracked wrappers + JSON dump."
license = "MIT OR Apache-2.0"

[features]
default = []
# Enables TrackedX wrappers, global registry, and JSON dump.
# Without this feature all macros expand to bare constructors with zero overhead.
# Heavy deps (scc, serde, serde_json) are only pulled in with this feature.
capacity-telemetry = [
    "dep:scc",
    "dep:serde",
    "dep:serde_json",
    "dep:bytes",
    "dep:indexmap",
    "dep:dashmap",
]

[dependencies]
# fxhash is always present — ShamirHasher is used in both on- and off-feature
# macro expansions so hash macros (tfxmap! etc.) expand correctly even when
# capacity-telemetry is disabled.  fxhash is a zero-dep pure hash algorithm
# crate (~200 lines); the overhead is negligible.
fxhash = "0.2.1"

# Optional — pulled in only with capacity-telemetry.
scc        = { version = "2.2",     optional = true }
serde      = { version = "1.0.217", optional = true, features = ["derive"] }
serde_json = { version = "1",       optional = true }
bytes      = { version = "1.11.0",  optional = true }
indexmap   = { version = "2.7",     optional = true }
dashmap    = { version = "6.1.0",   optional = true }

[dev-dependencies]
# Needed for the off-feature tests that exercise macros which expand to
# these types in the crate's own test suite.  External callers bring their
# own deps; these are only needed internally for testing.
scc      = "2.2"
bytes    = "1.11.0"
indexmap = "2.7"
dashmap  = "6.1.0"
serde_json = "1"
tempfile = "3"

[lib]
doctest = false

[lints]
workspace = true
