[package]
name = "shamir-client"
version = "0.1.0-alpha.1"
publish = false
edition = "2021"
description = "Async Rust client SDK for ShamirDB — TLS 1.3 + SCRAM-Argon2id + msgpack envelopes."
license = "MIT OR Apache-2.0"

[dependencies]
shamir-connect      = { path = "../shamir-connect" }
shamir-collections  = { path = "../shamir-collections" }
shamir-transport-tcp = { path = "../shamir-transport-tcp" }
shamir-query-types  = { path = "../shamir-query-types" }
shamir-query-builder = { path = "../shamir-query-builder" }
shamir-types        = { path = "../shamir-types" }

# Async runtime + I/O
tokio   = { version = "1", features = ["net", "io-util", "macros", "sync", "rt", "time"] }
tokio-rustls = "0.26"
rustls  = { version = "0.23", default-features = false, features = ["std"] }

# Lock-free concurrent maps (interner field-map cache registry + per-repo maps).
scc = "3.8"

# Wire serialization
serde       = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
rmp-serde   = "1"

# RNG — for nonce generation in Client::resume
rand      = "0.9"

# Misc
zeroize   = "1.8"
thiserror = "2"
tracing   = "0.1"

[dev-dependencies]
shamir-server  = { path = "../shamir-server" }
shamir-db      = { path = "../shamir-db" }
shamir-engine  = { path = "../shamir-engine" }
tempfile  = "3"
tokio = { version = "1", features = ["rt-multi-thread", "test-util"] }

[lib]
# Doctests are banned project-wide (slow: recompile-per-example). Examples
# live as illustration; behavioural coverage is in unit/integration tests.
doctest = false

[lints]
workspace = true
