[package]
name = "shamir-connect"
version = "0.1.0"
edition = "2021"
description = "ShamirDB connection protocol — SCRAM-Argon2id auth + Ed25519 server identity. Server and client modules in one library."
license = "MIT OR Apache-2.0"
repository = "https://github.com/PHPCraftdream/shamir-db"

[lib]
name = "shamir_connect"
path = "src/lib.rs"

[features]
default = ["client", "server"]
client = []
server = []

[dependencies]
# Crypto primitives (per spec §18)
argon2 = "0.5"
hmac = "0.12"
hkdf = "0.12"
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["zeroize"] }
aes-gcm = "0.10"
subtle = "2.5"
zeroize = { version = "1.7", features = ["derive"] }
rand = "0.8"

# Encoding
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"

# Username normalization (RFC 8265 PRECIS UsernameCaseMapped)
unicode-normalization = "0.1"

# Errors
thiserror = "2.0"

[dev-dependencies]
hex = "0.4"
serde_json = "1.0"

[lints.clippy]
all = "warn"
