[package]
name = "shamir-connect"
version = "0.1.0"
edition = "2021"
description = "ShamirDB connection protocol — SCRAM-Argon2id auth + Ed25519 server identity. Server and client modules in one library."
license = "MIT OR Apache-2.0"
repository = "https://github.com/PHPCraftdream/shamir-db"

[lib]
name = "shamir_connect"
path = "src/lib.rs"
# Doctests are banned project-wide (slow: recompile-per-example).
doctest = false

[features]
default = ["client", "server"]
client = []
server = ["dashmap", "parking_lot", "fxhash", "arc-swap"]
durable-redb = ["server", "redb"]

[dependencies]
# Crypto primitives (per spec §18)
argon2 = "0.5"
hmac = "0.12"
hkdf = "0.12"
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["zeroize"] }
aes-gcm = "0.10"
subtle = "2.5"
zeroize = { version = "1.7", features = ["derive"] }
rand = "0.8"

# Encoding
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"

# Username normalization (RFC 8265 PRECIS UsernameCaseMapped)
unicode-normalization = "0.1"
precis-profiles = "0.1"

# Errors
thiserror = "2.0"

# Logging for background GC / persistence failures that should not
# kill the request path but must surface to operators.
log = "0.4"

# Server-only (concurrent state)
arc-swap = { version = "1.7", optional = true }
dashmap = { version = "6.1", optional = true }
parking_lot = { version = "0.12", optional = true }
# Fast non-cryptographic hasher for the DashMaps that key by fixed-size
# byte arrays (session_id [u8;32], Subnet [u8;3..8]). DashMap's default
# SipHash is overkill for hash-tables where DoS resistance is already
# enforced upstream (rate limiter, auth).
fxhash = { version = "0.2", optional = true }
# Durable counter store (optional: durable-redb feature)
redb = { version = "3.1", optional = true }

[dev-dependencies]
hex = "0.4"
serde_json = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
shamir-bench-utils = { path = "../shamir-bench-utils" }
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }

[[bench]]
name = "hot_paths"
harness = false

[lints.clippy]
all = "warn"
