[package]
name = "shamir-db"
version = "0.1.0"
edition = "2021"
description = "ShamirDB facade — re-exports types/storage/engine/query and provides ShamirDb + SystemStore."
license = "MIT OR Apache-2.0"

[features]
# Cascade backend feature flags from shamir-storage / shamir-engine all
# the way through the facade. Default = all backends, so consumers
# that didn't pick features explicitly see no change. Embedded
# minimal builds: `default-features = false, features = ["redb"]`.
#
# `all-backends` lists per-backend features explicitly, mirroring
# shamir-engine — needed because the facade's own re-exports go through
# engine's BoxRepoFactory which is gated by engine's own features.
default = ["all-backends"]
all-backends = ["redb", "sled", "fjall", "nebari", "persy", "canopy"]
redb   = ["shamir-storage/redb",   "shamir-engine/redb"]
sled   = ["shamir-storage/sled",   "shamir-engine/sled"]
fjall  = ["shamir-storage/fjall",  "shamir-engine/fjall"]
nebari = ["shamir-storage/nebari", "shamir-engine/nebari"]
persy  = ["shamir-storage/persy",  "shamir-engine/persy"]
canopy = ["shamir-storage/canopy", "shamir-engine/canopy"]

[dependencies]
# Foundation crates re-exported under `shamir_db::*` so callers stay
# stable. The split is purely organisational; nothing about the public
# surface changed when these moved out.
shamir-types   = { path = "../shamir-types" }
shamir-storage = { path = "../shamir-storage", default-features = false }
shamir-engine  = { path = "../shamir-engine",  default-features = false }

# Direct deps for what's still here: the `db::shamir_db` facade
# (ShamirDb + SystemStore + execute) and the small `api/` shim.
serde       = { version = "1.0.217", features = ["derive"] }
serde_json  = "1.0.149"
tokio       = { version = "1.49.0", features = ["full"] }
dashmap     = "6.1.0"
log         = "0.4"            # log!/info!/warn! macros across the facade
async-trait = "0.1.81"         # AdminExecutor / TableResolver trait impls
rmp-serde   = "1.3.0"          # facade encodes audit / system-store records
rand        = "0.8.5"          # facade rng for record-id allocation
argon2      = "0.5"            # hash users.password_hash at rest (PHC string)

# Legacy network / TLS module (`db/net/*`) — kept compiling so the
# obsolete code doesn't bit-rot before its planned deletion.
rustls       = "0.23"
tokio-rustls = "0.26"
rcgen        = "0.13"

[dev-dependencies]
tempfile    = "3.10.1"
serial_test = "3.3.1"
criterion   = { version = "0.5", features = ["async_tokio", "html_reports"] }

[[bench]]
name = "engine_perf"
harness = false

