[package]
name = "shamir-engine"
version = "0.1.0"
edition = "2021"
description = "ShamirDB engine — DbInstance / RepoInstance / TableManager / IndexManager."
license = "MIT OR Apache-2.0"

[dependencies]
shamir-types = { path = "../shamir-types" }
shamir-storage = { path = "../shamir-storage" }

# Async / runtime
tokio = { version = "1.49.0", features = ["full"] }
async-stream = "0.3"
futures = "0.3"
async-trait = "0.1.81"
bytes = "1.11.0"
dashmap = "6.1.0"

# Data
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.149"
fxhash = "0.2.1"
rand = "0.8.5"
log = "0.4"               # log!/info!/warn! macros throughout engine
regex = "1.11.1"          # query::filter::eval Regex matcher
indexmap = { version = "2.7", features = ["serde"] }  # ordered maps in batch
rmp-serde = "1.3.0"       # query result encoding helpers
rmpv = { version = "1.3.1", features = ["serde"] }
bincode = "1.3.3"         # admin / index serialisation

[dev-dependencies]
tempfile = "3.10.1"
serial_test = "3.3.1"
# (No dev-dep cycle on shamir-db. The two tests that needed the
# `ShamirDb` facade — `admin_tests.rs`, `auth_tests.rs` — moved to
# `crates/shamir-db/tests/` as integration tests instead. Keeping the
# cycle would have made cargo compile shamir-engine twice and the
# `BatchError` types from the two copies wouldn't match.)
