[package]
name = "shamir-engine"
version = "0.1.0"
edition = "2021"
description = "ShamirDB engine — DbInstance / RepoInstance / TableManager / IndexManager."
license = "MIT OR Apache-2.0"

[dependencies]
shamir-types = { path = "../shamir-types" }
# Backends inherit `shamir-storage`'s feature set — the engine doesn't
# need any backend-specific code, but its `BoxRepoFactory` variants
# are gated by the same flags so they cascade through.
shamir-storage = { path = "../shamir-storage", default-features = false }
# Pure DTOs for the SDBQL surface — re-exported through the engine's
# `query::*` modules so callers see no path change.
shamir-query-types = { path = "../shamir-query-types" }
# Built-in scalar + aggregate function library. Dispatched from the
# filter / set / group-by paths via the engine's shared registries.
shamir-funclib = { path = "../shamir-funclib" }
shamir-wal = { path = "../shamir-wal" }
shamir-tx = { path = "../shamir-tx" }

# Async / runtime
tokio = { version = "1.49.0", features = ["full"] }
async-stream = "0.3"
futures = "0.3"
async-trait = "0.1.81"
bytes = "1.11.0"
dashmap = "6.1.0"

# Data
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.149"
fxhash = "0.2.1"
# Inline storage for field-path Vec<u64> (1-3 segments typical) —
# avoids heap alloc per FilterNode / SelectProjection. Already a
# transitive dep via several crates.
smallvec = { version = "1.11", features = ["serde"] }
rand = "0.8.5"
log = "0.4"               # log!/info!/warn! macros throughout engine
regex = "1.11.1"          # query::filter::eval Regex matcher
indexmap = { version = "2.7", features = ["serde"] }  # ordered maps in batch
rmp-serde = "1.3.0"       # query result encoding helpers
rmpv = { version = "1.3.1", features = ["serde"] }
bincode = "1.3.3"         # admin / index serialisation
serde_bytes = "0.11"      # efficient byte-slice serde for shadow log
thiserror = "2.0"         # error types for index2/* (Phase 0)
rust-stemmers = "1.2"    # snowball stemming for FTS tokenizers
scc = "2.2"               # lock-free concurrent hashmap (index2::registry)
arc-swap = "1.7"          # RCU-style atomic Arc swap (index2::actor snapshots)
hnsw_rs = "0.3"           # HNSW approximate nearest neighbor (vector index)
# Pulls Cranelift — the function-engine Wasm runtime (slice 2+).
wasmtime = { version = "45", default-features = false, features = [
    "cranelift",
    "runtime",
    "std",
    "wat",
    "async",
] }
tempfile = "3.10.1"

[features]
# Cascade `shamir-storage`'s per-backend features upward so callers can
# pick them at the engine level too:
#   shamir-engine = { default-features = false, features = ["redb"] }
#
# `all-backends` lists every per-backend feature explicitly (NOT just
# `shamir-storage/all-backends`) because the engine's own `BoxRepo` /
# `BoxRepoFactory` variants are gated by the engine-level features —
# enabling storage backends without enabling the matching engine
# feature would compile away the variant constructors.
default = ["all-backends"]
all-backends = ["redb", "sled", "fjall", "nebari", "persy", "canopy"]
redb   = ["shamir-storage/redb"]
sled   = ["shamir-storage/sled"]
fjall  = ["shamir-storage/fjall"]
nebari = ["shamir-storage/nebari"]
persy  = ["shamir-storage/persy"]
canopy = ["shamir-storage/canopy"]

[target.'cfg(unix)'.dev-dependencies]
dhat = "0.3"

[dev-dependencies]
tempfile = "3.10.1"
serial_test = "3.3.1"
argon2 = "0.5"            # independent KAT reference in function::tests::argon2id_tests
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
# Tests build queries via the typed query builder instead of raw JSON.
# query-builder depends only on query-types/types — no cycle on engine.
shamir-query-builder = { path = "../shamir-query-builder" }
# (No dev-dep cycle on shamir-db. The two tests that needed the
# `ShamirDb` facade — `admin_tests.rs`, `auth_tests.rs` — moved to
# `crates/shamir-db/tests/` as integration tests instead. Keeping the
# cycle would have made cargo compile shamir-engine twice and the
# `BatchError` types from the two copies wouldn't match.)

[[bench]]
name = "wal_recovery"
harness = false

[[bench]]
name = "interner_concurrent"
harness = false

[[bench]]
name = "interner_cold_growth"
harness = false

[[bench]]
name = "membuffer_concurrent"
harness = false

[[bench]]
name = "filter_eval"
harness = false

[[bench]]
name = "group_by_keys"
harness = false

[[bench]]
name = "distinct"
harness = false

[[bench]]
name = "select_pipeline"
harness = false

[[bench]]
name = "permission_check"
harness = false

[[bench]]
name = "membuffer_pump"
harness = false

[[bench]]
name = "vector_search"
harness = false

[[bench]]
name = "order_by_pipeline"
harness = false

[[bench]]
name = "select_projection"
harness = false

[[bench]]
name = "tx_pipeline"
harness = false

[[bench]]
name = "wasm_invoke"
harness = false

[lib]
# Doctests are banned project-wide (slow: recompile-per-example). Examples
# live as illustration; behavioural coverage is in unit/integration tests.
doctest = false
